Create a ml service + refactor frontend

--- a/static/index.html
+++ b/static/index.html
@@ -30,318 +30,19 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="#">AZ Testing</a>
-                </div>
-
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#schema">Schema</a></li>
-                        <li><a href="#convergence">Convergence</a></li>
-                        <li><a href="#projections">Projections</a></li>
+                    <ul class="nav navbar-nav navbar-left">
+                        <li><a href="/new">
+                            <span class="glyphicon glyphicon-plus"></span> New experiment</a></li>
                     </ul>
-                    <form class="navbar-form navbar-left" role="search" onsubmit="return search()">
-                        <div class="form-group">
-                            <input type="text" id="search-uuid" class="form-control" placeholder="Search uuid">
-                        </div>
-                        <button type="submit" class="btn btn-default">
-
-                            <span class="glyphicon glyphicon-search"></span>
-                        </button>
-                    </form>
                 </div>
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <!-- <div class="collapse navbar&#45;collapse" id="bs&#45;example&#45;navbar&#45;collapse&#45;1"> -->
-                <!--     <ul class="nav navbar&#45;nav"> -->
-                <!--         <li class="active"><a href="#">Link</a></li> -->
-                <!--         <li><a href="#">Link</a></li> -->
-                <!--         <li class="dropdown"> -->
-                <!--             <a href="#" class="dropdown&#45;toggle" data&#45;toggle="dropdown">Dropdown <span class="caret"></span></a> -->
-                <!--             <ul class="dropdown&#45;menu" role="menu"> -->
-                <!--                 <li><a href="#">Action</a></li> -->
-                <!--                 <li><a href="#">Another action</a></li> -->
-                <!--                 <li><a href="#">Something else here</a></li> -->
-                <!--                 <li class="divider"></li> -->
-                <!--                 <li><a href="#">Separated link</a></li> -->
-                <!--                 <li class="divider"></li> -->
-                <!--                 <li><a href="#">One more separated link</a></li> -->
-                <!--             </ul> -->
-                <!--         </li> -->
-                <!--     </ul> -->
-                <!--     <form class="navbar&#45;form navbar&#45;left" role="search"> -->
-                <!--         <div class="form&#45;group"> -->
-                <!--             <input type="text" class="form&#45;control" placeholder="Search"> -->
-                <!--         </div> -->
-                <!--         <button type="submit" class="btn btn&#45;default">Submit</button> -->
-                <!--     </form> -->
-                <!--     <ul class="nav navbar&#45;nav navbar&#45;right"> -->
-                <!--         <li><a href="#">Link</a></li> -->
-                <!--         <li class="dropdown"> -->
-                <!--             <a href="#" class="dropdown&#45;toggle" data&#45;toggle="dropdown">Dropdown <span class="caret"></span></a> -->
-                <!--             <ul class="dropdown&#45;menu" role="menu"> -->
-                <!--                 <li><a href="#">Action</a></li> -->
-                <!--                 <li><a href="#">Another action</a></li> -->
-                <!--                 <li><a href="#">Something else here</a></li> -->
-                <!--                 <li class="divider"></li> -->
-                <!--                 <li><a href="#">Separated link</a></li> -->
-                <!--             </ul> -->
-                <!--         </li> -->
-                <!--     </ul> -->
-                <!-- </div><!&#45;&#45; /.navbar&#45;collapse &#45;&#45;> -->
             </div><!-- /.container-fluid -->
         </nav>
         <div class="container">
-
-            <section>
-                <h2 id="schema">Schema
-                    <button id="schema-refresh" type="button" class="btn btn-default btn-lg pull-right">
-                        <span class="glyphicon glyphicon-refresh"></span>
-                    </button>
-                </h2>
-                <hr/>
-                <table class="table table-striped table-bordered" id="schema-table">
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Default</th>
-                            <th>Distribution</th>
-                            <th>Params</th>
-                        </tr>
-                    </thead>
-                    <tbody></tbody>
-                </table>
-            </section>
-
-
-            <section>
-                <h2 id="convergence">Convergence
-                    <button id="convergence-refresh" type="button" class="btn btn-default btn-lg pull-right">
-                        <span class="glyphicon glyphicon-refresh"></span>
-                    </button>
-                </h2>
-                <hr/>
-
-                <button id="convergence-checkboxes-toggle" type="button" class="btn btn-default btn-lg pull-right">
-                    <span class="glyphicon glyphicon-ok"></span>
-                    Toggle selection
-                </button>
-                <div id="convergence-checkboxes"></div>
-                <div id="charts"></div>
-            </section>
-
-
-            <section>
-                <h2 id="projections">Projections
-
-                    <button id="projections-refresh" type="button" class="btn btn-default btn-lg pull-right">
-                        <span class="glyphicon glyphicon-refresh"></span>
-                    </button>
-                </h2>
-                <hr/>
-                <select id="objective-function-select-parameter" class="form-control">
-                </select>
-                <div id="objective-function"></div>
-            </section>
+            <h1>Welcome</h1>
         </div>
 
-        <script src="js/d3.min.js" charset="utf-8"></script>
-        <script src="js/graph.js" charset="utf-8"></script>
         <script src="js/jquery.min.js" charset="utf-8"></script>
         <script src="js/bootstrap.min.js" charset="utf-8"></script>
 
-        <script>
-
-            // State
-            var objectiveFunctionData = undefined;
-            var graphsData = undefined;
-            var graphDataToDisplay = undefined;
-            var schema = undefined;
-            var uuid = 'aztest2';
-
-            $( "#objective-function-select-parameter" ).change(function() {
-                var varName = $( "#objective-function-select-parameter" ).val();
-
-                xdata = objectiveFunctionData[varName].x;
-                ydata = objectiveFunctionData[varName].y;
-
-                $("#objective-function .chart").remove();
-                drawScatterChart(xdata, ydata, varName, 'f('+varName+')', "#objective-function");
-
-            });
-
-            function loadSchema(uuid) {
-
-                $.get( "/api/schema/" + uuid, function( dataString ) {
-                    schema = $.parseJSON(dataString);
-
-                    features = getFeatures(schema['features']);
-
-                    d3.select("#schema-table tbody")
-                    .selectAll('tr')
-                    .data(features)
-                    .enter().append('tr')
-                    .selectAll('td')
-                    .data(function(d) {
-                        return [d, schema['features'][d]['default'], schema['features'][d]['distribution'], JSON.stringify(schema['features'][d]['params'])] })
-                    .enter().append('td')
-                    .text(function (d) { return d });
-
-                });
-            }
-
-            function getFeatures(data) {
-                var features = [];
-                for (var varName in data) {
-                    features.push(varName);
-                }
-
-                features.sort();
-                return features;
-            }
-
-            function assignCheckboxValues() {
-
-                    var features = getFeatures(graphsData);
-
-                    $("#convergence-checkboxes label").remove();
-                    var labels = d3.select("#convergence-checkboxes")
-                    .selectAll("label")
-                    .data(features)
-                    .enter().append("label")
-                    .attr("class", "inline-checkbox")
-                    .text(function (d) { return d; })
-
-                    labels.append("input")
-                    .attr("type", "checkbox")
-                    .attr("checked", function (d) { if ( !graphDataToDisplay[d]) { return null; } else { return "checked"; }})
-                    .on("change", function (d) {
-                        // Toggle
-                        if (graphDataToDisplay[d]) {
-                            graphDataToDisplay[d] = false;
-                        }
-                        else {
-                            graphDataToDisplay[d] = true;
-                        }
-                        cleanUpGraph();
-                        plotGraphsToDisplay(); })
-
-            }
-
-
-            function loadGraphData(uuid) {
-
-                $.get( "/api/graph/results/" + uuid, function( dataString ) {
-                    var data = $.parseJSON(dataString);
-                    graphsData = data;
-
-                    // Initializes graphs to display
-                    if ( graphDataToDisplay == undefined ) {
-                        graphDataToDisplay = {}
-                        for (var varName in data) {
-                            graphDataToDisplay[varName] = true;
-                        }
-                    }
-
-                    assignCheckboxValues();
-                    plotGraphsToDisplay();
-                });
-            }
-
-            function plotGraphsToDisplay() {
-
-                cleanUpGraph();
-                var features = getFeatures(graphsData);
-
-                for(var i in features) {
-
-                    varName = features[i];
-                    if (graphDataToDisplay[varName]) {
-                        ydata = graphsData[varName];
-                        xdata = range(ydata.length);
-                        drawChart(xdata, ydata, "draw #", varName, "#charts");
-                    }
-                }
-
-            }
-
-            function cleanUpGraph() {
-                $("#charts .chart").remove();
-            }
-
-            function loadObjectiveFunctionData(uuid) {
-
-                $.get( "/api/graph/obj/" + uuid, function( dataString ) {
-
-                    var data = $.parseJSON(dataString);
-
-                    // Debugging
-                    objectiveFunctionData = data;
-
-                    $("#objective-function .chart").remove();
-
-                    var features = [];
-                    for (var varName in data) {
-                        features.push(varName);
-                    }
-
-                    features.sort();
-
-                    d3.select("#objective-function-select-parameter")
-                    .selectAll('option')
-                    .data(features)
-                    .enter().append('option')
-                    .attr('value', function (d) { return d; })
-                    .text(function (d) { return d; });
-
-                    if (features.length > 0) {
-
-                        feature = features[0]
-                        xdata = data[feature].x;
-                        ydata = data[feature].y;
-
-                        drawScatterChart(xdata, ydata, feature, 'f(' + feature +')', "#objective-function");
-
-                    }
-
-                });
-
-            }
-
-            function toggleGraphDataToDisplay() {
-
-                var toggleValue = false;
-                for ( var varName in graphDataToDisplay ) {
-                    if ( !graphDataToDisplay[varName] ) {
-                        toggleValue = true;
-                        break;
-                    }
-                }
-
-                for ( var varName in graphDataToDisplay ) {
-                    graphDataToDisplay[varName] = toggleValue;
-                }
-            }
-
-            function search() {
-                uuid = $("#search-uuid").val();
-                loadSchema(uuid);
-                loadGraphData(uuid);
-                loadObjectiveFunctionData(uuid);
-
-                return false;
-            }
-
-            $( document ).ready(function() {
-                // Event Handlers
-                $("#schema-refresh").click(function () { loadSchema(uuid); });
-                $("#convergence-refresh").click(function () { loadGraphData(uuid); });
-                $("#projections-refresh").click(function () { loadObjectiveFunctionData(uuid); });
-                $("#convergence-checkboxes-toggle").click(function () {
-                    toggleGraphDataToDisplay();
-                    cleanUpGraph();
-                    plotGraphsToDisplay();
-                    assignCheckboxValues();
-                });
-            });
-
-        </script>
     </body>
 </html>
